--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
     "ember-addon"
   ],
   "dependencies": {
-    "ember-cli-babel": "^5.0.0",
-    "ember-getowner-polyfill": "^1.0.0"
+    "ember-cli-babel": "^5.0.0"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
